--- a/index.html
+++ b/index.html
@@ -893,6 +893,136 @@
                 badge: "💇‍♀️ Recomendado",
                 soldOut: false
             },
+    {
+                id: 20,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto20.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 21,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto21.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 22,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto22.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 23,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto23.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 24,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto24.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 25,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto25.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 26,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto26.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 27,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto27.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 28,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto28.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 29,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto29.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 30,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto30.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 31,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto31.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
+{
+                id: 32,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto32.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false
+            },
         ];
 
         // Configuración general (almacenada en localStorage)
