--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,187 @@
     pricePer: "1 unidad", // Nuevo campo
     visible: true
             },
+{
+                id: 33,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto33.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 34,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto34.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 35,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto35.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 36,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto36.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 37,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto37.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 38,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto38.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 39,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto39.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 40,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto40.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 41,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto41.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 42,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto42.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 43,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto43.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 44,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto44.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 45,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto45.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 46,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto46.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+{
+                id: 47,
+                name: "Shampoo Reconstrucción Capilar",
+                category: "hair",
+                image: "producto47.jpg",
+                price: "69.90",
+                oldPrice: "99.00",
+                badge: "💇‍♀️ Recomendado",
+                soldOut: false,
+    pricePer: "1 unidad", // Nuevo campo
+    visible: true
+            },
+
             
         ];
 
